src/test/fail/bad_start_token.lly
#[
SyntaxError: Unexpected token +.
Where: File "test/fail/bad_start_token.lly" at line 6
]#

+
